<resources>
    <string name="app_name">Group Calendars</string>
    <string name="date_schedule">해당 날짜의 일정</string>
    <string name="main_page">메인 페이지</string>
    <string name="personal_calendar">개인 캘린더</string>
    <string name="custom_calendar">커스텀 캘린더</string>
    <string name="nextArrow"><![CDATA[->]]></string>
    <string name="prevArrow"><![CDATA[<-]]></string>
    <string name="_8_2023">8월 2023</string>
    <string name="add_calendar">add Calendar</string>
    <string name="add_date">+</string>
    <string name="year_month_day">Year Month Day</string>
    <string name="_2023_9_1">날짜설정 (예: 2023년 9월 1일)</string>
    <string name="hint">내용을 입력하세요</string>
    <string name="addDate">일정 추가</string>
    <string name="Sun">일요일</string>
    <string name="Mon">월요일</string>
    <string name="Tue">화요일</string>
    <string name="Wed">수요일</string>
    <string name="Thu">목요일</string>
    <string name="Fri">금요일</string>
    <string name="Sat">토요일</string>
    <string name="_1">1</string>
    <string name="date_title">Date Title</string>
    <string name="dates_info">Dates Info</string>
    <string name="date_contents">Date Contents</string>
    <string name="delete_Date">X</string>
    <string name="privacyPublic">공개 일정</string>
    <string name="privacyPravte">비공개 일정</string>
    <string name="hint_title">일정 제목을 선택하세요</string>
    <string name="date_content">Date Content</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="inputEmail">이메일 주소를 입력하세요</string>
    <string name="inputUsername">이름을 입력하세요</string>
    <string name="inputPW">비밀번호를 입력하세요</string>
    <string name="loginLogo">로그인</string>
    <string name="newAccount">회원가입</string>
    <string name="forgotPW">비밀번호 변경</string>
    <string name="openmenu">메뉴 열기</string>
    <string name="personalSettings">개인정보 설정</string>
    <string name="userName">사용자 이름</string>
    <string name="email">이메일</string>
    <string name="extra">수정</string>
    <string name="logout">로그아웃</string>
    <string name="toMain">메인으로</string>
    <string name="edit">수정</string>
    <string name="addEvent">일정추가</string>
    <string name="deleteEvent">일정삭제</string>
    <string name="input_calendar_name">캘린더 이름을 입력하세요</string>
    <string name="create">개인 생성</string>
    <string name="mainpage">메인 화면</string>
    <string name="toCalendar">캘린더로 이동</string>
    <string name="startDateSelect">시작 날짜 선택</string>
    <string name="endDateSelect">종료 날짜 선택</string>
    <string name="setGroupName">그룹 이름을 입력하세요</string>
    <string name="createGroup">그룹 생성</string>
    <string name="groupURL">그룹 공유 URL 전송</string>
    <string name="friends">친구관리</string>
    <string name="friendList">친구 목록</string>
    <string name="friendsRequest">친구 요청</string>
    <string name="addFriends">친구 추가</string>
    <string name="textEmailAddress">친구의 이메일을 입력하세요</string>

</resources>