<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/privacyRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/privacyPublic" />

        <RadioButton
            android:id="@+id/radioPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyPravte" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextEventStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/startDateSelect"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextFields" />

    <!-- 종료 날짜 선택을 위한 EditText -->
    <EditText
        android:id="@+id/editTextEventEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/endDateSelect"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextEventTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/date_title"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextEventContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/date_contents"
        android:inputType="textMultiLine"
        android:lines="4"
        android:scrollbars="vertical"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/update"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
