<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launch"
        android:layout_margin="20dp"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/inputEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/inputPW"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            style="@style/BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginLogo"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/forgotPasswordButton"
            style="@style/BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPW"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/registerButton"
            style="@style/BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newAccount"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>
