<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2FF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".custom.AddEvent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/privacyRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPublic"
                android:checked="true"
                android:layout_marginEnd="20dp" />

            <RadioButton
                android:id="@+id/radioPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPravte" />
        </RadioGroup>

        <!-- 시작 날짜 선택을 위한 EditText -->
        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/startDateSelect"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="TextFields" />

        <!-- 종료 날짜 선택을 위한 EditText -->
        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/endDateSelect"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editTextEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextEventContent"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonSaveEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDate"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
